# oopLabs

./: .clang-format  CMakeLists.txt  README.md
1stLab/: func.cpp  googleTest.cpp  main.cpp
2ndLab/: CMakeLists.txt  Six.cpp  Six.hpp  main.cpp  tests.cpp
3dLab/: CMakeLists.txt  main.cpp
3dLab/include/: Figure.hpp  FigureList.hpp  Hexagon.hpp  Octagon.hpp  Point.hpp  Triangle.hpp  Vector.hpp
3dLab/src/: FigureList.cpp  Hexagon.cpp  Octagon.cpp  Point.cpp  Triangle.cpp  Vector.cpp
3dLab/tests/: test.cpp
4Lab/: CMakeLists.txt  main.cpp
4Lab/include/: Figure.hpp  FigureArray.hpp  Hexagon.hpp  Octagon.hpp  Point.hpp  Triangle.hpp
4Lab/src/: FigureArray.cpp  Hexagon.cpp  Octagon.cpp  Point.cpp  Triangle.cpp
4Lab/tests/: test.cpp
